--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1>Ana Carbó García</h1>
     <h2>Artista</h2>
     <!-- <h3>cita famosa aqui</h3> -->
+     <h3>“Sueño mi pintura, y luego pinto mi sueño.”</h3>
+     <h4>- Van Goh</h4>
     <div>
         <p>Soy una artista autónoma que realiza ilustraciones reminiscientes a los dibujos y cómics japoneses.
             Aparte de esto, estoy aprendiendo html.</p>
@@ -39,6 +41,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima ipsum amet earum veniam sit ullam at voluptates
         nesciunt corrupti placeat deserunt, distinctio vero impedit numquam perspiciatis, aspernatur unde, iure quos?
     </p>
+    <video src="https://youtu.be/d-nxW9qBtxQ?si=zUNE6wyeu7AMNvsa"></video>
     <br>
 </body>
 
