--- a/index.html
+++ b/index.html
@@ -12,21 +12,12 @@
     <h1>Ana Carbó García</h1>
     <h2>Artista</h2>
     <!-- <h3>cita famosa aqui</h3> -->
-     <h3>“Sueño mi pintura, y luego pinto mi sueño.”</h3>
-     <h4>- Van Goh</h4>
+    <h3>“Sueño mi pintura, y luego pinto mi sueño.”</h3>
+    <h4>- Van Goh</h4>
     <div>
         <p>Soy una artista autónoma que realiza ilustraciones reminiscientes a los dibujos y cómics japoneses.
             Aparte de esto, estoy aprendiendo html.</p>
     </div>
-    <br>
-    <h4>Enlaces útiles</h4>
-    <nav>
-        <ul>
-            <li><a href="ilustraciones.html">Ilustraciones</a></li>
-            <li><a href="contactos.html">Información de contacto</a></li>
-            <li><a href="formulario.html">Solicitar ilustración</a></li>
-        </ul>
-    </nav>
     <br>
     <div>
         <h2>Mi pasión y biografía</h2>
@@ -37,12 +28,29 @@
         <img src="https://picsum.photos/id/642/600/400" alt="">
     </div>
     <br>
-    <h2>Educación y conocimientos</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima ipsum amet earum veniam sit ullam at voluptates
-        nesciunt corrupti placeat deserunt, distinctio vero impedit numquam perspiciatis, aspernatur unde, iure quos?
-    </p>
-    <video src="https://youtu.be/d-nxW9qBtxQ?si=zUNE6wyeu7AMNvsa"></video>
+    <div>
+        <h2>Educación y conocimientos</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima ipsum amet earum veniam sit ullam at
+            voluptates
+            nesciunt corrupti placeat deserunt, distinctio vero impedit numquam perspiciatis, aspernatur unde, iure
+            quos?
+        </p>
+    </div>
     <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/d-nxW9qBtxQ?si=zUNE6wyeu7AMNvsa"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
+
+<h5>Enlaces útiles</h>
+
+<nav>
+    <ul>
+        <li><a href="ilustraciones.html">Ilustraciones</a></li>
+        <li><a href="contactos.html">Información de contacto</a></li>
+        <li><a href="formulario.html">Solicitar ilustración</a></li>
+    </ul>
+</nav>
 
 </html>
