--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
-
-<h5>Enlaces útiles</h>
-
+<h4>Enlaces útiles</h4>
 <nav>
     <ul>
         <li><a href="ilustraciones.html">Ilustraciones</a></li>
