--- a/contactos.html
+++ b/contactos.html
@@ -10,10 +10,12 @@
 <body>
     <h2>Formas de contacto</h2>
     <p>Redes sociales y otras formas de contacto </p>
+  <h3>Contacto</h3>
     <address>
         <br>
-        <a href="tel:+56682845859">Télefono</a>
-        <a href="mailto:hola@focasmexicanas.com">Gmail</a>
+        <a href="tel:+666666666">Télefono</a>
+        <br>
+        <a href="mailto:anacarbogarcia17@gmail.com">Gmail</a>
     </address>
     <h3>Redes sociales</h3>
     <ul>
