--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
     </div>
     <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/d-nxW9qBtxQ?si=zUNE6wyeu7AMNvsa"
-        title="YouTube video player" frameborder="0"
+        title="YouTube video player" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</body>
-<h4>Enlaces útiles</h4>
+        <h4>Enlaces útiles</h4>
 <nav>
     <ul>
         <li><a href="ilustraciones.html">Ilustraciones</a></li>
@@ -50,5 +49,7 @@
         <li><a href="formulario.html">Solicitar ilustración</a></li>
     </ul>
 </nav>
+</body>
+
 
 </html>
